--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="home">
-  <img src="img/stars1.webp" alt="stars" class="stars"id="stars">
+  <img src="stars1.webp" alt="stars" class="stars"id="stars">
   
   <div class="top-bar">
     <div class="logo">
