--- a/index.html
+++ b/index.html
@@ -3,36 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="code-solid.svg">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Saleh</title>
 </head>
-
 <body>
-<div class="home">
-  <img src="stars1.webp" alt="stars" class="stars"id="stars">
-  
-  <div class="top-bar">
+  <header class="header">
     <div class="logo">
-      <h2>Saleh</h2>
-    </div>
-    <div class="nav-bar">
+    <i class="fa-solid fa-code"></i>
+    <a href="#" class="logo">Saleh</a>
+  </div>
+    
+    <nav class="nav">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About me</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact me</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact us</a></li>
       </ul>
+  </header>
+  <div class="main-content">
+    <div class="content-text">
+      <h1>Hi my name is</h1>
+      <h2>Abdelrahman <span>Saleh</span></h2>
+      <h3>i'm a <span>BI</span> analyst</h3>
+    </div>
+    <div class="content-image">
+        <img src="Conan.png" alt="Conan">
     </div>
   </div>
-  <div class="home-content">
-    <div class="main-text">
-      <h1>Hello&#128525, my name is</h1>
-      <h2>Abdelrahman <span>Saleh</span></h2>
-      <h3>I'm a <span>BI</span> Analyst.</h3>
-      <button href="#" class="cv-btn">Download CV</button>
-    </div>
-</div>    
+  
 </body>
 </html>
