--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <title>Saleh</title>
 </head>
 <body>
+<div class="home">
   <header class="header">
     <div class="logo">
     <i class="fa-solid fa-code"></i>
-    <a href="#" class="logo">Saleh</a>
+      <a href="#" class="logo">Saleh</a>
   </div>
-    
     <nav class="nav">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="#">About me</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Contact me</a></li>
       </ul>
   </header>
   <div class="main-content">
@@ -28,11 +28,28 @@
       <h1>Hi my name is</h1>
       <h2>Abdelrahman <span>Saleh</span></h2>
       <h3>i'm a <span>BI</span> analyst</h3>
+
+      <div class="socialmedia" id="socialmedia">
+        <a href="https://www.facebook.com/CONANA14" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/abdelrahman-e-saleh-1918b4207"target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/Conan877"target="_blank"><i class="fa-brands fa-github"></i></a>    
+    </div>
+    <button href="#" class="cv-btn">Download CV</button>
     </div>
     <div class="content-image">
-        <img src="Conan.png" alt="Conan">
+        <img src="Conan.png" alt="Conan">     
     </div>
   </div>
-  
+</div>  
+
+ <div class="about-me">
+  <div class="about-me-image">
+    <img src="Conan.png" alt="Conan">
+    </div>
+  <div class="about-me-text">
+    <h1>About me</h1>
+      <h2>Hello, I'm Abdelrahman!</h2>
+      <p>A highly motivated MIS-BI Analyst with a passion for transforming data into meaningful insights. I have extensive experience in creating analytical reports and automating processes using Python and VBA. My expertise lies in data manipulation and effective communication, and I take pride in optimizing business operations to enhance efficiency and profitability.</p>
+      
 </body>
 </html>
